--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "element-plus": "^2.9.8",
     "pinia": "^3.0.1",
     "reset-css": "^5.0.2",
+    "sass": "^1.87.0",
+    "stylelint": "^16.19.1",
+    "stylelint-config-recommended-vue": "^1.6.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-scss": "^6.11.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
