chore: 添加PostCSS及相关Stylelint配置依赖

--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     "dayjs": "^1.11.13",
     "element-plus": "^2.9.8",
     "pinia": "^3.0.1",
+    "postcss": "^8.5.3",
+    "postcss-html": "^1.8.0",
+    "postcss-scss": "^4.0.9",
     "reset-css": "^5.0.2",
     "sass": "^1.87.0",
     "stylelint": "^16.19.1",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.6.0",
+    "stylelint-config-standard": "^38.0.0",
     "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-scss": "^6.11.1",
     "vue": "^3.5.13",
